# quantum-anomaly-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_tabular.ipynb  02_time_series.ipynb  03_image.ipynb  04_graph_network.ipynb
src/quantum_anomaly_detection/: __init__.py
src/quantum_anomaly_detection/circuits/: autoencoder.py  feature_maps.py  qaoa.py  swap_test.py  utils.py
src/quantum_anomaly_detection/classical/: benchmarks.py
src/quantum_anomaly_detection/data/: graph.py  image.py  preprocessing.py  tabular.py  time_series.py
src/quantum_anomaly_detection/evaluation/: metrics.py
src/quantum_anomaly_detection/methods/: qaoa_clustering.py  qaoa_regression.py  quantum_distance.py  quantum_kernel.py  vqc_autoencoder.py
src/quantum_anomaly_detection/visualization/: plots.py
tests/: conftest.py  test_circuits.py  test_classical.py  test_data.py  test_methods.py
